[package]
name = "android_hprof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
byteorder = "1"
thiserror = "1"
chrono = "0.4"

[dev-dependencies]
anyhow = "1"

[[example]]
name = "android_analyzer"